Bug 880932 - Fixed lack of response to APZC paint requests; r=BenWa All paint requests get tagged with the current nsPresShellId. TabChild will always trigger a response so APZC doesn't get left hanging.